login module implemented.

--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -60,7 +60,7 @@
                 </table>
                 <p>
                     <input type="submit" class="button" value="Sign Up &raquo;" />
-                    <a href="menu">Already have an account? Click here to Sign in</a>
+                    <a href="login">Already have an account? Click here to Sign in</a>
                 </p>
             </form>
         </div>
