--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Menu</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
-    <h1>login html</h1>
+<div id="wrap">
+    <div id="top_content">
+        <div id="header">
+            <div id="rightheader">
+                <p>
+                    Group 60
+                    <br />
+                </p>
+            </div>
+            <div id="topheader">
+                <h1 id="title">
+                    <a href="#">Linker</a>
+                </h1>
+            </div>
+            <div id="navigation">
+            </div>
+        </div>
+        <div id="content">
+            <p id="whereami">
+            </p>
+            <h1>
+                Sign in
+            </h1>
+            <form th:action="@{/user/login}" method="post">
+                <table cellpadding="0" cellspacing="0" border="0"
+                       class="form_table">
+                    <tr>
+                        <td valign="middle" align="right">
+                            username:
+                        </td>
+                        <td valign="middle" align="left">
+                            <input type="text" class="inputgri" name="email_address" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="middle" align="right">
+                            password:
+                        </td>
+                        <td valign="middle" align="left">
+                            <input type="password" class="inputgri" name="password" />
+                        </td>
+                    </tr>
+                </table>
+                <p>
+                    <input type="submit" class="button" value="Sign in &raquo;" />
+                    &nbsp;&nbsp;
+                    <a href="register">No account? Click here to sign up</a>
+                </p>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
-</html>
