--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -55,7 +55,7 @@
                         current
                     </td>
                 </tr>
-                <tr th:each="party,state:${partyList}"  th:class="${state.odd?'row1':'row2'}">
+                <tr th:each="party,state:${parties}"  th:class="${state.odd?'row1':'row2'}">
                     <td>
                         <span th:text="${party.party_id}"></span>
                     </td>
@@ -63,36 +63,21 @@
                         <span th:text="${party.title}"></span>
                     </td>
                     <td>
-                        <span th:src="${party.description}" width="60"></span>
+                        <span th:text="${party.description}" th:width="60"></span>
                     </td>
                     <td>
-                        <span th:text="${#dates.format(party.date,'yyyy/MM/dd')}"></span>
-                    </td>
-                    <td>
-                        <span th:text="${party.timer}"></span>
+                        <span th:text="${#dates.format(party.start_time,'yyyy/MM/dd')}"></span>
                     </td>
                     <td>
                         <span th:text="${party.place}"></span>
                     </td>
                     <td>
-                        <span th:text="${party.current} + '/' + ${party.maximum}"></span>
+                        <span th:text="${party.current_member} + '/' + ${party.max_member}"></span>
                     </td>
                     <td>
-                        <a href="javascript:;" th:onclick="'deleteEmployee('+${employee.id}+')'">删除</a>
-                        <!--								<a th:href="@{/employee/detail?id=}+${employee.id}+'&name='+${employee.name}">更新</a>-->
-                        <!--								<a th:href="@{/employee/detail(id=${employee.id},name=${employee.name})}">更新</a>-->
-                        <a th:href="@{/employee/detail(id=${employee.id})}">更新</a>
-
+                        <span th:text="${party.belongs_to}"></span>
                     </td>
                 </tr>
-                <script>
-                    function deleteEmployee(id){
-                        console.log(id);
-                        if(window.confirm('确定要删除这条记录吗?')){
-                            location.href='[[@{/employee/delete?id=}]]'+id;
-                        }
-                    }
-                </script>
             </table>
             <p>
                 <input type="button" class="button" value="添加" onclick="addEmp()"/>
