--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Menu</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style1.css">
     <script th:src="@{js/jquery.js}"></script>
     <script th:src="@{js/jquery-1.7.1.js}"></script>
     <script type="text/javascript">
@@ -23,57 +23,37 @@
 </head>
 
 <body>
+<video autoplay muted loop poster="asset/first_frame.jpg" id="bgvid">
+<source th:src="@{asset/sea.mp4}" type="video/mp4"> </video>
+ 
 <div id="wrap">
     <div id="top_content">
         <div id="header">
             <div id="rightheader">
                 <p>
                     Group 60
-                    <br />
+                    <br/>
                     <button id="test">test</button>
-                </p>
+                </p >
             </div>
             <div id="topheader">
                 <h1 id="title">
-                    <a href="#">Linker</a>
+                    <a href=" ">Linker</a >
                 </h1>
             </div>
             <div id="navigation">
             </div>
         </div>
-        <div id="content">
-            <p id="whereami">
-            </p>
-            <h1>
-                Sign in
+        <div id="content" style="text-align:center;vertical-align:middle;">
+            <br>
+            <h1 style="text-align:center">
+                Login
             </h1>
-            <form th:action="@{/user/login}" method="post">
-                <table cellpadding="0" cellspacing="0" border="0"
-                       class="form_table">
-                    <tr>
-                        <td valign="middle" align="right">
-                            username:
-                        </td>
-                        <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="email_address" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="middle" align="right">
-                            password:
-                        </td>
-                        <td valign="middle" align="left">
-                            <input type="password" class="inputgri" name="password" />
-                        </td>
-                    </tr>
-                </table>
-                <p>
-                    <input type="submit" class="button" value="Sign in &raquo;" />
-                    &nbsp;&nbsp;
-                    <a href="register">No account? Click here to sign up</a>
-                </p>
-            </form>
-        </div>
-    </div>
-</div>
-</body>
+            <form th:action="@{/user/login}" method="post" class="form">
+               
+                <input type="text" class="inputgri" name="email_address" placeholder="username"/>          
+                <br>
+    <input type="password" class="inputgri" name="password" placeholder="password"/>
+                <br>
+    <button type="submit">login</button>      
+    <p class="message">Not registered? <a href="register">Create an account</a >
