--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -56,6 +56,8 @@
                     <td>
                         holder_id
                     </td>
+                    <td>
+                    </td>
                 </tr>
                 <tr th:each="party,state:${parties}"  th:class="${state.odd?'row1':'row2'}">
                     <td>
@@ -79,7 +81,25 @@
                     <td>
                         <span th:text="${party.belongs_to}"></span>
                     </td>
+                    <td>
+                        <a href="javascript:;" th:onclick="'join('+${party.party_id} + ')'">Join</a>
+                        <a href="javascript:;" th:onclick="'quit('+${party.party_id}+')'">Quit</a>
+                    </td>
                 </tr>
+                <script>
+                    function join(partyId){
+                        if(window.confirm('Confirm to Join')){
+                            location.href='[[@{/user/joinparty?partyId=}]]' + partyId;
+                        }
+                    }
+                </script>
+                <script>
+                    function quit(partyId){
+                        if(window.confirm('Confirm to Quit')){
+                            location.href='[[@{/user/quitparty?partyId=}]]'+ partyId;
+                        }
+                    }
+                </script>
             </table>
             <p>
                 <input type="button" class="button" value="add" onclick="addParty()"/>
