--- a/src/main/resources/templates/myParty.html
+++ b/src/main/resources/templates/myParty.html
@@ -80,13 +80,21 @@
                         <span th:text="${myparties.belongs_to}"></span>
                     </td>
                     <td>
-                        <a href="javascript:;" th:onclick="'quit('+${myparties.party_id}+')'">Quit</a>
+                        <a th:if="${session.user.getUser_id() != myparties.belongs_to}" href="javascript:;" th:onclick="'quit('+${myparties.party_id}+')'">Quit</a>
+                        <a th:if="${session.user.getUser_id() == myparties.belongs_to}" href="javascript:;" th:onclick="'dismiss('+${myparties.party_id}+')'">Dismiss</a>
                     </td>
                 </tr>
                 <script>
                     function quit(partyId){
                         if(window.confirm('Confirm to Quit')){
                             location.href='[[@{/user/quitparty?partyId=}]]'+ partyId;
+                        }
+                    }
+                </script>
+                <script>
+                    function dismiss(partyId){
+                        if(window.confirm('Confirm to Dismiss')){
+                            location.href='[[@{/user/dismissparty?partyId=}]]'+ partyId;
                         }
                     }
                 </script>
