finished dismiss function and now the pages are showing holder's name rather than holder's id

--- a/src/main/resources/templates/addParty.html
+++ b/src/main/resources/templates/addParty.html
@@ -53,9 +53,9 @@
                         <td valign="middle" align="right">
                             Time:
                         </td>
-<!--                        <td valign="middle" align="left">-->
-<!--                            <input type="datetime-local" class="inputgri" name="start_time" />-->
-<!--                        </td>-->
+                        <td valign="middle" align="left">
+                            <input type="date" class="inputgri" name="start_time" />
+                        </td>
                     </tr>
                     <tr>
                         <td valign="middle" align="right">
