--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -54,7 +54,7 @@
                         members
                     </td>
                     <td>
-                        holder_id
+                        holder_name
                     </td>
                     <td>
                     </td>
@@ -79,24 +79,17 @@
                         <span th:text="${party.current_member} + '/' + ${party.max_member}"></span>
                     </td>
                     <td>
-                        <span th:text="${party.belongs_to}"></span>
+                        <span th:text="${party.getHolder_name()}"></span>
                     </td>
                     <td>
-                        <a href="javascript:;" th:onclick="'join('+${party.party_id} + ')'">Join</a>
-                        <a href="javascript:;" th:onclick="'quit('+${party.party_id}+')'">Quit</a>
+                        <a th:if="${session.user.getUser_id() != party.getBelongs_to()}" href="javascript:;" th:onclick="'join('+${party.party_id} + ')'">Join</a>
+                        <a th:if="${session.user.getUser_id() == party.getBelongs_to()}">You are the holder</a>
                     </td>
                 </tr>
                 <script>
                     function join(partyId){
                         if(window.confirm('Confirm to Join')){
                             location.href='[[@{/user/joinparty?partyId=}]]' + partyId;
-                        }
-                    }
-                </script>
-                <script>
-                    function quit(partyId){
-                        if(window.confirm('Confirm to Quit')){
-                            location.href='[[@{/user/quitparty?partyId=}]]'+ partyId;
                         }
                     }
                 </script>
