implements mail service but not connected

--- a/src/main/resources/templates/addParty.html
+++ b/src/main/resources/templates/addParty.html
@@ -70,7 +70,7 @@
                             Maximum participants:
                         </td>
                         <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="max_member" />
+                            <input type="number" value="2" class="inputgri" name="max_member" />
                         </td>
                     </tr>
                 </table>
