--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -35,7 +35,7 @@
                        class="form_table">
                     <tr>
                         <td valign="middle" align="right">
-                            Email:
+                            Username:
                         </td>
                         <td valign="middle" align="left">
                             <input type="text" class="inputgri" name="email_address" />
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td valign="middle" align="right">
-                            password:
+                            Password:
                         </td>
                         <td valign="middle" align="left">
                             <input type="password" class="inputgri" name="password" />
@@ -58,7 +58,11 @@
                         </td>
                     </tr>
                 </table>
+                <a>*If the username has already taken by other user, or you enter two different</a>
+                <br>
+                <a>password, registration will fail (You will not be taken to the login page)</a>
                 <p>
+                    <br>
                     <input type="submit" class="button" value="Sign Up &raquo;" />
                     <a href="login">Already have an account? Click here to Sign in</a>
                 </p>
